# mcp-vn-stock

./: main.py  pyproject.toml  weather.py  yfinance.cache
docs/: implementation_plan.md  refactor_design.md
src/vnstock-agent/agent/: yahoo_finance_agent.py
src/vnstock_agent/: __init__.py  server.py
src/vnstock_agent/agent/: __init__.py  yahoo_finance_agent.py
