[project]
name = "mcp-vn-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "pyrate-limiter>=2.10.0",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.55",
]

authors = [
    { name = "Louis", email = "trinhquocquang.buh@gmail.com" }
]